# digital-genome-community

./: .gitignore  ALERTS.md  AXIOMAS_LEIS_GDC.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ENTERPRISE-BACKLOG.md  ETHICS.md  GATES_QUANTUM_READY.md  GOVERNANCE.md  KNOWN-VIOLATIONS.md  LAWS_UNL_UNIVERSALITY.md  LICENSE  PATCH-PLAN.md  PATCH_CANON_2026-01-28-001.md  PHYSIOLOGY.md  PRINCIPLES.md  README.md  RELEASE-NOTES.md  RFC_PROCESS.md  SECURITY.md  THREADING.md
RFC/: README.md
docs/: LEI_COLAPSO_SEMANTICO_RASCUNHO.md
examples/: batch_processing.rs  canonical_test_harness.rs  canonical_validation.rs  from_bytes.rs  from_file.rs  generate_datasets.rs  multithread_demo.rs  rigorous_validation.rs
src/: lib.rs
src/archive/: mod.rs
src/budget/: mod.rs
src/cognition/chaos/: mod.rs  motor.rs  tests.rs  types.rs
src/cognitive/: cycle.rs  dna.rs  mod.rs
src/competition/: mod.rs
src/completeness/: mod.rs
src/core/: identifiers.rs  invariants.rs  mod.rs  types.rs
src/core_types/: identifiers.rs  mod.rs
src/correlation/: mod.rs
src/engine/: analysis.rs  mod.rs  mutation.rs  records.rs  traits.rs
src/hierarchy/: action.rs  brain.rs  dna.rs  mod.rs  neuron.rs  synapse.rs  truth.rs
src/math/: craft.rs  mod.rs  probability.rs
src/maturation/: mod.rs
src/memory/: codon.rs  context.rs  journal.rs  learning.rs  mci.rs  mod.rs  provenance.rs
src/motors/: mod.rs
src/observability/: mod.rs
src/perception/: mod.rs  traits.rs  types.rs
src/replay/: mod.rs
src/selection/: mod.rs
src/sensory/: carrier.rs  cortex.rs  mod.rs  output.rs  pattern.rs  proto_agency.rs  signals.rs  state.rs  structure.rs
src/topology/: connections.rs  mod.rs  network.rs  nodes.rs
src/traits/: mod.rs
src/unl/: emulator.rs  mod.rs  spec.rs
tests/: canonical_validation_tests.rs  integration_tests.rs  test_evolution_full_cycle.rs  test_hierarchy.rs
validation/: CANONICAL-PROTOCOL.md  CANONICAL_VALIDATION_PROTOCOL.md  EXECUTION-GUIDE.md  EXPECTATIONS.md  OPERATOR_INSTRUCTIONS.md
validation/reports/: canonical_validation_report.txt
validation/scripts/: generate_datasets.rs
(+15 files in other folders)
