[package]
name = "digital-genome-community"
version = "1.0.0"
edition = "2021"
description = "The Canonical Core of the Digital Genome: A Cognitive Architecture for Industrial AI."
authors = ["Digital Genome Community <core@digitalgenome.org>"]
license = "Apache-2.0"
readme = "README.md"

[lib]
name = "digital_genome_community"
path = "src/lib.rs"

[dependencies]
# --- CORE TYPES & SERIALIZATION ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- IDENTIFIERS & TIME ---
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# --- INTEGRITY & CRYPTO ---
sha2 = "0.10"
hex = "0.4"

# --- ERROR HANDLING ---
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
